--- a/style.css
+++ b/style.css
@@ -3,11 +3,127 @@
 }
 
 .form-container {
-  width: 20vw;
-  height: 50vh;
+  width: 500px;
+  height: 650px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-around;
+  background-color: #b7b7a4;
+  font-family: "Montserrat", sans-serif;
+  border-radius: 5px;
+  z-index: 2;
+  position: fixed;
+  margin: auto;
+  margin-top: -52px;
+  left: 0;
+  right: 0;
+}
+
+.form-container > * {
+  font-size: 25px;
+  font-family: "Montserrat", sans-serif;
+  color: #283618;
+}
+
+#status-input {
+  transform: scale(2.5);
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #fefae0;
+}
+
+.page-title {
+  font-size: 55px;
+  font-family: "Montserrat", sans-serif;
+  color: #283618;
+}
+
+.new-book-btn {
+  font-size: 30px;
+  padding: 5px 5px;
+  font-family: "Montserrat", sans-serif;
+  background-color: #fefae0;
+}
+
+.new-book-btn:hover {
+  background-color: #4b662b;
+  color: white;
+}
+
+.form-popup {
+  visibility: visible;
+  -webkit-animation: fadeIn 0.3s;
+  animation: fadeIn 0.3s;
+  z-index: 2;
+}
+
+/* Add animation (fade in the popup) */
+@-webkit-keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.book-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  width: 100vw;
+  margin-left: 150px;
+}
+
+.book-div {
+  padding: 20px;
+  background-color: #ddb892;
+  margin: 25px;
+  margin-left: 20px;
+  width: 300px;
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: "Montserrat", sans-serif;
+  border-radius: 5px;
+}
+
+.book-div > button {
+  font-size: 20px;
+  padding: 5px 5px;
+  font-family: "Montserrat", sans-serif;
+  background-color: #fefae0;
+}
+
+.book-div > button:hover {
+  background-color: #e5989b;
+}
+
+.book-div > * {
+  color: #283618;
+}
+
+#status-box {
+  transform: scale(2.1);
+}
+
+.status-div {
+  display: flex;
+  align-items: center;
   justify-content: space-evenly;
-  background-color: aquamarine;
+  width: 65%;
 }
